2006-07-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify.pm: make it so people won't confuse the plugin list
	with installed/uninstalled packages

2006-07-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: test for the existence of $cctools_version before
	applying a comparison operator to it

2006-07-10  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Enable 'cleanup --dpkg-status'

2006-06-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: modify &additional_packages to match the changes in
	the set of essential packages (forward-port from branch_0_24)

2006-06-27  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Add fink-dpkg-status-cleanup.in to tarball.

2006-06-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: recognize 10.4.7

2006-06-23  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Engine.pm: Don't use FORMAT for heredoc
	terminator (confuses perl-mode).
	* Config.pm: --version includes arch in Distribution

2006-06-23  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Lay groundwork for cleanup --dpkg-status
	* Services.pm: _expand_help: sanity-check the %opts{} passed to
	get_options.

2006-06-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: don't internationalize dpkg-bootstrap

2006-06-12  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: allow %p/X11 as a valid path

2006-06-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: use the $distribution when comparing versions for a 
	'point release'

2006-06-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Percent-expand before comparing strings.

2006-06-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: In Files field, skip if source and target dirs
	are identical.

2006-05-31  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Don't say "darwin" when we mean "the local kernel"

2006-05-31  Daniel Macks  <dmacks@netspace.org>
