@@ -1,3 +1,8 @@
+2006-07-12  Daniel Macks  <dmacks@netspace.org>
+
+	* Package.pm: Remove unused variable. Check a variable directly
+	instead of using a secondary variable for metadata.
+
 2006-07-11  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* Notify.pm: make it so people won't confuse the plugin list
